fix(IncominLinksSidebar): scroll overflowing content (#5391)

--- a/src/stylesheets/legacy-styles.css
+++ b/src/stylesheets/legacy-styles.css
@@ -8579,6 +8579,7 @@ pre,
     text-decoration: underline;
   }
   .entity-sidebar__incoming-links {
+    overflow-y: auto;
     color: #8091a5;
   }
   .entity-sidebar__translation-pills {
